--- a/style-home.css
+++ b/style-home.css
@@ -4,7 +4,7 @@ body {
     }
     
     header {
-    background-image: url("https://picsum.photos/id/1005/1920/300");
+    background-color: darkolivegreen;
     background-size: cover;
     color: #fff;
     padding: 50px;
@@ -39,53 +39,53 @@ body {
     margin-top: 0;
     }
     
-    section {
-        padding: 50px;
-        margin-bottom: 50px;
-        background-color: #fff;
-        border: 1px solid #ccc;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
+section {
+    padding: 50px;
+    margin-bottom: 50px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
         
-        h2 {
-        font-size: 36px;
-        margin-top: 0;
-        }
+h2 {
+    font-size: 36px;
+    margin-top: 0;
+}
         
-        .flower {
-        margin-bottom: 50px;
-        }
+.flower {
+    margin-bottom: 50px;
+}
         
-        .flower img {
-        float: left;
-        margin-right: 20px;
-        }
+.flower img {
+    float: left;
+    margin-right: 20px;
+}
         
-        .flower h3 {
-        margin-top: 0;
-        }
+.flower h3 {
+    margin-top: 0;
+}
         
-        .flower a {
-        display: block;
-        margin-top: 10px;
-        background-color: #ff7f50;
-        color: #fff;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        }
+.flower a {
+    display: block;
+    margin-top: 10px;
+    background-color: #ff7f50;
+    color: #fff;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+}
         
-        .flower a:hover {
-        background-color: #ff6347;
-        }
+.flower a:hover {
+    background-color: #ff6347;
+}
         
-        footer {
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        padding: 20px;
-        clear: both;
-        }
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    clear: both;
+}
         
         /* Media Queries */
         
