--- a/style-information.css
+++ b/style-information.css
@@ -1,8 +1,7 @@
 /* general styles */
 body {
-	font-family: 'Open Sans', sans-serif;
-	margin: 0;
-	padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
 }
 
 .container {
@@ -11,16 +10,46 @@ body {
 	padding: 20px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+header {
+    background-color: darkolivegreen;
+    background-size: cover;
+    color: #fff;
+    padding: 50px;
+}
+    
+nav {
+    float: right;
+}
+    
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+    
+nav li {
+    display: inline-block;
+    margin-left: 20px;
+    }
+    
+nav a {
+    color: #fff;
+    text-decoration: none;
+}
+    
+nav a:hover {
+    color: #f2f2f2;
+    }
+
+h1 {
+    font-size: 48px;
+    margin-top: 0;
+}
+
+h2, h3, h4, h5, h6 {
 	font-weight: 700;
 	color: #333;
 	margin: 0;
-}
-
-p {
-	color: #666;
-	line-height: 1.5;
-	margin-bottom: 1.5rem;
 }
 
 ul {
@@ -91,6 +120,26 @@ a:hover {
 }
 
 /* responsive styles */
+@media screen and (max-width: 768px) {
+    header {
+    padding: 20px;
+    }
+    h1 {
+    font-size: 36px;
+    }
+    nav {
+    float: none;
+    }
+    nav li {
+    display: block;
+    margin: 0;
+    }
+    .flower img {
+    float: none;
+    margin-right: 0;
+    }
+    }
+
 @media screen and (max-width: 767px) {
 	.gallery img {
 		width: calc(50% - 10px);
