--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ a.logo {
   font-size: 16px;
 }
 /*======================menubar========================*/
+/* copy all of these to your css file to make sure our menubar look similar*/
 button.learnmore {
   display: block;
   margin-top: 5vh;
@@ -522,6 +523,7 @@ a.portfolio {
   grid-column-start: col1;
   grid-column-end: col7;
 }
+/* copy all of these page_grid too!*/
 .content_container.page_grid {
   display: grid;
   grid-gap: 20px 0px;
