--- a/style-information.css
+++ b/style-information.css
@@ -9,144 +9,654 @@ body {
 	margin: 0 auto;
 	padding: 20px;
 }
-
-header {
-    background-color: darkolivegreen;
-    background-size: cover;
-    color: #fff;
-    padding: 50px;
-}
     
-nav {
-    float: right;
-}
-    
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-    
-nav li {
-    display: inline-block;
-    margin-left: 20px;
-    }
-    
-nav a {
-    color: #fff;
-    text-decoration: none;
-}
-    
-nav a:hover {
-    color: #f2f2f2;
-    }
-
-h1 {
-    font-size: 48px;
-    margin-top: 0;
-}
-
-h2, h3, h4, h5, h6 {
-	font-weight: 700;
-	color: #333;
-	margin: 0;
-}
-
-ul {
-	list-style: none;
+/*======================menubar========================*/
+.menubar {
+	background-color: #ffffff;
+	padding: 10px 0px;
+	position: fixed;
+	width: 100vw;
+	top: 0;
+	overflow: hidden;
+	z-index: 9999;
+	box-shadow: 0px 12px 24px rgb(0 0 0 / 10%);
+  }
+  .menubar ul {
+	list-style-type: none;
 	padding: 0;
-	margin: 0;
-}
-
-a {
-	color: #06c;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-/* gallery section styles */
-.gallery {
+	margin-block-start: 0 !important;
+	margin-block-end: 0 !important;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
+	justify-content: space-around;
+  }
+  .menubar ul li {
+	display: flex;
+	vertical-align: middle;
+	align-items: center;
+  }
+  .menubar a {
+	text-decoration: none;
+	letter-spacing: 1px;
+	font-size: 1em;
+	font-weight: 600;
+	padding: 10px;
+	color: #505050 !important;
+	vertical-align: middle;
+  }
+  .menubar a:hover {
+	background-color: grey;
+  }
+  img.logo {
+	width: 50px;
+	height: fit-content;
+  
+  }
+  a.logo {
+	text-decoration: none;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-size: 18px;
+	padding: 10px;
+	color: #ffffff;
+	vertical-align: middle;
+  }
+  .content_container input[type=text] {
+	float: right;
+	padding: 6px;
+	margin-top: 0px;
+	margin-right: 0px;
+	border-bottom: 1px solid #505050;
+	border-top: 0px;
+	border-right: 0px;
+	border-left: 0px; 
+	font-size: 17px;
+  }
+  ::placeholder {
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 16px;
+  }
+  /*======================menubar========================*/
+  /* copy all of these to your css file to make sure our menubar look similar*/
+  button.learnmore {
+	display: block;
+	margin-top: 5vh;
+	margin-left: auto;
+	margin-right: auto; 
+	padding-top: 20px; 
+	padding-bottom: 20px;
+	background-color: #70CF84;
+	background-repeat: no-repeat;
+	border: 0px; 
+	border-radius: 8px; 
+  }
+  button.learnmore a {
+	text-decoration: none; 
+	color: #ffffff;
+	text-transform: uppercase;
+	font-size: 1em; 
+	font-weight: 600; 
+	letter-spacing: 1px; 
+	padding: 50px 20px;
+  }
+  button.overall {
+	display: block;
+	margin: auto;
+	margin-top: 5vh;
+	padding-top: 20px; 
+	padding-bottom: 20px; 
+	background-color: #ffffff;
+	background-repeat: no-repeat;
+	border: 0px; 
+	border-radius: 8px; 
+  }
+  button.overall a {
+	text-decoration: none; 
+	color: #323232;
+	text-transform: uppercase;
+	font-size: 1em;  
+	font-weight: 600; 
+	letter-spacing: 1px; 
+	padding: 50px 20px;
+  }
+  button.overlay {
+	display: block;
+	margin-top: 20px;
+	padding-top: 20px; 
+	padding-bottom: 20px; 
+	background-color: transparent;
+	background-repeat: no-repeat;
+	border: 2px solid #0f1f2a; 
+	cursor: pointer;
+  }
+  button.overlay a {
+	text-decoration: none; 
+	color: #0f1f2a;
+	text-transform: uppercase;
+	font-size: 16px; 
+	font-weight: 600; 
+	letter-spacing: 1px; 
+	padding: 20px;
+  }
+  p.intro_text {
+	text-align: center;
+	margin-top: 5vh;
+	margin-bottom: 0px;
+	margin-left: 10vw;
+	margin-right: 10vw;
+	padding: 0px;
+	font-size: 16px;
+  }
+  p.overall {
+	margin-top: 0vh;
+	margin-bottom: 0vh;
+	padding-top: 20px;
+	font-size: 1.125em;
+	color: #ffffff;
+  }
+  p.overallblockquote {
+	margin-top: 10px;
+	margin-bottom: 0vh;
+	padding-top: 20px;
+	font-size: 1.125em;
+	text-align: center;
+	font-style: italic;
+	color: #ffffff;
+  }
+  .stripe {
+	display: grid;
+	grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
+  }
 
-.gallery img {
-	width: calc(25% - 10px);
-	margin-bottom: 20px;
-}
+  .stripe.slide {
+	margin-top: 10vh;
+	margin-bottom: 100px;
+  }
 
-/* fun facts section styles */
-.fun-facts {
-	background-color: #f5f5f5;
-	padding: 40px;
+  .stripe.info {
+	margin-top: 10vh;
+	margin-bottom: 100px;
+  }
+
+  div.overall {
+	display: block; 
+	background-color: #70CF84;
+	padding-top: 10vh;
+	padding-bottom: 10vh; 
+	padding-left: 10vw;
+	padding-right: 10vw;
+	height: auto;
+	border-radius: 8px; 
+  }
+  .stripe.introduction h1 {
+	font-family: 'Rozha One',serif;
+	text-align: center;
+	font-size: 4.5em;
+	font-weight: 100;
+	color: #323232;
+	margin-top: 25vh;
+	margin-bottom: 0vh;
+	margin-left: auto;
+	margin-right: auto;
+	letter-spacing: 5px; 
+  }
+  .stripe.introduction h2 {
+	text-align: center;
+	font-size: 20px;
+	color: #0f1f2a;
+	margin-top: 4vh;
+	margin-bottom: 0vh;
+	margin-left: auto;
+	margin-right: auto;
+	letter-spacing: 2px; 
+  }
+  .stripe.history h2 {
+	margin-top: 0px;
+	margin-bottom: 0px; 
+	text-align: center;
+	font-size: 2.25em;
+	color: #ffffff; 
+	font-family: 'Rozha One',serif; 
+  }
+  .stripe.features h2 {
+	text-align: center;
+	font-size: 5rem;
+  }
+  .stripe.contents h2 {
+	text-align: center;
+	font-size: 5rem;
+	color: #0f1f2a;
+	margin-top: 0px;
 	margin-bottom: 40px;
-}
-
-.fun-facts h3 {
-	margin-top: 0;
+  }
+  .feature.introduction h1 {
+	text-align: center;
+	font-size: 5rem;
+	color: #0f1f2a;
+	margin-top: 40px;
 	margin-bottom: 20px;
-}
+  }
+  .contents.introduction h1 {
+	text-align: center;
+	font-size: 5rem;
+	color: #0f1f2a;
+	margin-top: 0px;
+	margin-bottom: 180px;
+	padding-left: 200px;
+	padding-right: 200px;
+  }
+  .feature_item {
+	height: auto;
+	padding: 0px;
+	overflow: hidden;
+	background-color: #dddddd;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .feature_item h3 {
+	padding-top: 300px;
+	padding-bottom: 20px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	text-align: center;
+	margin: 0px;
+  }
+  .feature_item button {
+	width: 100%;
+	border: 0px;
+	padding: 0px;
+  }
+  .feature_item button a {
+	display: block;
+	padding: 0px;
+	text-decoration: none;
+	font-size: 16px;
+	color: #0f1f2a;
+  }
+  .feature_item.category1 h3 {
+	background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/Alphabet.jpg');
+  }
+  .feature_item.category2 h3 {
+	background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/Color.jpg');
+  }
+  .feature_item.category3 h3 {
+	background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/Month.jpg');
+  }
+  img.about {
+	display: block;
+	margin-left: 0vw;
+	margin-right: auto;
+	height: auto;
+	width: 30vw;
+	box-shadow: 5vw 5vw #dddddd;
+  }
+  p.about {
+	margin-top: 10vh;
+	margin-bottom: 0px;
+	margin-left: 5vw;
+	margin-right: 0vw;
+	padding: 0px;
+	font-size: 16px;
+	line-height: 200%;
+  }
+  img.history {
+	display: block;
+	margin-left: 5vw;
+	margin-right: auto;
+	height: auto;
+	width: 30vw;
+	box-shadow: 5vw 5vw #dddddd;
+  }
 
-.fun-facts ul {
-	column-count: 2;
-}
+/* Slideshow container */
+.slideshow-container {
+	max-width: 800px;
+	position: relative;
+	margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+	display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+	background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+	color: #f2f2f2;
+	font: 15px Sarabun, serif;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	text-align: center;
+	background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+	color: black;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+	cursor: pointer;
+	height: 8px;
+	width: 8px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+	background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+	from {opacity: .4}
+	to {opacity: 1}
+  }
+  
+  @keyframes fade {
+	from {opacity: .4}
+	to {opacity: 1}
+  }
 
-.fun-facts li {
-	margin-bottom: 10px;
-}
-
-/* other resources section styles */
-.other-resources {
-	background-color: #fff;
-	padding: 40px;
-	margin-bottom: 40px;
-}
-
-.other-resources h2 {
-	margin-top: 0;
-	margin-bottom: 20px;
-}
-
-.other-resources ul {
-	column-count: 2;
-}
-
-.other-resources li {
-	margin-bottom: 10px;
-}
-
-/* responsive styles */
-@media screen and (max-width: 768px) {
-    header {
-    padding: 20px;
-    }
-    h1 {
-    font-size: 36px;
-    }
-    nav {
-    float: none;
-    }
-    nav li {
+  /*======================footer========================*/
+  div.footer1 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  div.footer2 {
+    margin-top: 10px;
+    margin-left: 30vw;
+    margin-right: 30vw;
+  }
+  p.footer1 {
+    margin-left: auto;
+    margin-right: auto;
+    color: #ffffff;
+    text-align: right;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 18px;
+  }
+  p.footer2 {
+    color: #ffffff;
+    text-align: center;
+    font-size: 14px;
+  }
+  img.logoend {
     display: block;
-    margin: 0;
-    }
-    .flower img {
-    float: none;
-    margin-right: 0;
-    }
-    }
-
-@media screen and (max-width: 767px) {
-	.gallery img {
-		width: calc(50% - 10px);
+    width: 50%;
+    margin: auto;
+  }
+  p.logoend {
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-left: auto; 
+    margin-right: auto; 
+    text-align: center; 
+    letter-spacing: 1px;
+    font-size: 18px;
+    color: #ffffff;
+    vertical-align: middle;
+  }
+  /*======================footer========================*/
+  .content_container {
+	grid-column-start: col1;
+	grid-column-end: col7;
+  }
+  /* copy all of these page_grid too!*/
+  .content_container.page_grid {
+	display: grid;
+	grid-gap: 20px 0px;
+  } 
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  font-size: 1em;
+  font-family: 'Open Sans';
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+  font-size: 1em;
+  font-family: 'Open Sans';
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+  font-size: 1em;
+  font-family: 'Open Sans';
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+	from {
+		top: -300px;
+		opacity: 0
+	}
+  
+	to {
+		top: 0;
+		opacity: 1
+	}
+  }
+  
+@keyframes animatetop {
+	from {
+		top: -300px;
+		opacity: 0
+	}
+	to {
+		top: 0;
+		opacity: 1
+	}
+}
+  
+  #top {
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #071015; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+  }
+  
+  #top:hover {
+  background-color: #0f1f2a; /* Add a dark-grey background on hover */
+  }
+  /* Responsive layout - makes a one column-layout instead of a two-column layout */
+  @media only screen and (min-width: 880px) {
+	.stripe {
+	  grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
+	}
+	.content_container.page_grid {
+	  display: grid;
+	  grid-template-columns: [col1] 1fr [col4] 1fr [col7];
+	  grid-gap: 40px;
+	}
+	.content_container.page_grid1 {
+	  display: grid;
+	  grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
+	  grid-gap: 40px;
+	}
+	.content_container.page_grid2 {
+	  display: grid;
+	  grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
+	  grid-gap: 40px;
+	  margin-top: 40px;
+	}
+	.content_container.page_grid3 {
+	  display: grid;
+	  grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
+	  grid-gap: 40px;
+	  margin-top: 40px;
+	}
+	.footer {
+	  padding-top: 40px;
+	  padding-bottom: 20px;
+	  background-color: #000000;
+	  display: grid;
+	  grid-template-columns: [col1] 1fr [col7];
+	  grid-gap: 0px;
+	}
+	.flex-container {
+	  display: flex;
+	  flex-direction: row;
 	}
 	
-	.fun-facts ul,
-	.other-resources ul {
-		column-count: 1;
+	.flex-item-left {
+	  padding: 0px;
+	  flex: 50%;
+	  margin-left: 5vw;
 	}
-}
+	
+	.flex-item-right {
+	  padding: 0px;
+	  flex: 50%;
+	  margin-right: 5vw;
+	}
+  }
+  @media (max-width: 800px) {
+	.flex-item-right, .flex-item-left {
+	  flex-direction: column;
+	  margin: 0px;
+	}
+	.content_container input[type=text] {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	  width: 100%;
+	  margin: 0;
+	  padding: 14px;
+	}
+	
+	.content_container input[type=text] {
+	  border: 1px solid #ccc;  
+	}
+  }
+  @media print,
+	(-webkit-min-device-pixel-ratio: 1.25),
+	(min-resolution: 1.25dppx),
+	(min-resolution: 120dpi) {
+	/* Style adjustments for high resolution devices */
+  }
+  
+  /* ==========================================================================
+	 Print styles.
+	 Inlined to avoid the additional HTTP request:
+	 https://www.phpied.com/delay-loading-your-print-css/
+	 ========================================================================== */
+  
+  @media print {
+	*,
+	*::before,
+	*::after {
+	  background: #fff !important;
+	  color: #000 !important;
+	  /* Black prints faster */
+	  box-shadow: none !important;
+	  text-shadow: none !important;
+	}
+  
+	a,
+	a:visited {
+	  text-decoration: underline;
+	}
+  
+	a[href]::after {
+	  content: " (" attr(href) ")";
+	}
+  
+	abbr[title]::after {
+	  content: " (" attr(title) ")";
+	}
+  
+	/*
+	 * Don't show links that are fragment identifiers,
+	 * or use the `javascript:` pseudo protocol
+	 */
+	a[href^="#"]::after,
+	a[href^="javascript:"]::after {
+	  content: "";
+	}
+  
+	pre {
+	  white-space: pre-wrap !important;
+	}
+  
+	pre,
+	blockquote {
+	  border: 1px solid #999;
+	  page-break-inside: avoid;
+	}
+  
+	/*
+	 * Printing Tables:
+	 * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+	 */
+	thead {
+	  display: table-header-group;
+	}
+  
+	tr,
+	img {
+	  page-break-inside: avoid;
+	}
+  
+	p,
+	h2,
+	h3 {
+	  orphans: 3;
+	  widows: 3;
+	}
+  
+	h2,
+	h3 {
+	  page-break-after: avoid;
+	}
+  }
+  
