--- a/style-information.css
+++ b/style-information.css
@@ -60,6 +60,8 @@ body {
 	color: #ffffff;
 	vertical-align: middle;
   }
+
+
   .content_container input[type=text] {
 	float: right;
 	padding: 6px;
@@ -200,117 +202,18 @@ body {
 	margin-right: auto;
 	letter-spacing: 5px; 
   }
-  .stripe.introduction h2 {
+  .stripe.message {
 	text-align: center;
-	font-size: 20px;
-	color: #0f1f2a;
-	margin-top: 4vh;
-	margin-bottom: 0vh;
-	margin-left: auto;
-	margin-right: auto;
-	letter-spacing: 2px; 
+	margin-top: 5vh;
+  	margin-bottom: 0px;
+  	margin-left: 10vw;
+  	margin-right: 10vw;
+  	padding: 0px;
+  	font-size: 16px;
   }
-  .stripe.history h2 {
-	margin-top: 0px;
-	margin-bottom: 0px; 
-	text-align: center;
-	font-size: 2.25em;
-	color: #ffffff; 
-	font-family: 'Rozha One',serif; 
-  }
-  .stripe.features h2 {
-	text-align: center;
-	font-size: 5rem;
-  }
-  .stripe.contents h2 {
-	text-align: center;
-	font-size: 5rem;
-	color: #0f1f2a;
-	margin-top: 0px;
-	margin-bottom: 40px;
-  }
-  .feature.introduction h1 {
-	text-align: center;
-	font-size: 5rem;
-	color: #0f1f2a;
-	margin-top: 40px;
-	margin-bottom: 20px;
-  }
-  .contents.introduction h1 {
-	text-align: center;
-	font-size: 5rem;
-	color: #0f1f2a;
-	margin-top: 0px;
-	margin-bottom: 180px;
-	padding-left: 200px;
-	padding-right: 200px;
-  }
-  .feature_item {
-	height: auto;
-	padding: 0px;
-	overflow: hidden;
-	background-color: #dddddd;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .feature_item h3 {
-	padding-top: 300px;
-	padding-bottom: 20px;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	text-align: center;
-	margin: 0px;
-  }
-  .feature_item button {
-	width: 100%;
-	border: 0px;
-	padding: 0px;
-  }
-  .feature_item button a {
-	display: block;
-	padding: 0px;
-	text-decoration: none;
-	font-size: 16px;
-	color: #0f1f2a;
-  }
-  .feature_item.category1 h3 {
-	background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/Alphabet.jpg');
-  }
-  .feature_item.category2 h3 {
-	background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/Color.jpg');
-  }
-  .feature_item.category3 h3 {
-	background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/Month.jpg');
-  }
-  img.about {
-	display: block;
-	margin-left: 0vw;
-	margin-right: auto;
-	height: auto;
-	width: 30vw;
-	box-shadow: 5vw 5vw #dddddd;
-  }
-  p.about {
-	margin-top: 10vh;
-	margin-bottom: 0px;
-	margin-left: 5vw;
-	margin-right: 0vw;
-	padding: 0px;
-	font-size: 16px;
-	line-height: 200%;
-  }
-  img.history {
-	display: block;
-	margin-left: 5vw;
-	margin-right: auto;
-	height: auto;
-	width: 30vw;
-	box-shadow: 5vw 5vw #dddddd;
-  }
-
 /* Slideshow container */
 .slideshow-container {
-	max-width: 800px;
+	max-width: 1000px;
 	position: relative;
 	margin: auto;
   }
@@ -349,8 +252,8 @@ body {
   
   /* Caption text */
   .text {
-	color: #f2f2f2;
-	font: 15px Sarabun, serif;
+	color: #f5f5f5;
+	font: 18px Arial, serif;
 	padding: 8px 12px;
 	position: absolute;
 	bottom: 8px;
