--- a/style-home.css
+++ b/style-home.css
@@ -445,7 +445,7 @@ div.overall {
   background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/intro.jpg');
 }
 .feature_item.category4 h3 {
-  background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/intro.jpg');
+  background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/species.jpg');
 }
   /*======================footer========================*/
   div.footer1 {
