update contact us

--- a/style-contactus.css
+++ b/style-contactus.css
@@ -573,9 +573,13 @@ div.form-container {
 }
 
 /* Style for the thank you message */
-.thank-you-message {
-    display: none;
+.message {
+    width: 100%;
+    position: absolute;
     text-align: center;
     font-size: 24px;
     color: #4CAF50;
+    margin-bottom:  60px;
+    animation: button .3s linear;
+    display: none;
   }
