--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -1,3 +1,11 @@
+body {
+    background-color: #ffffff;
+    font-family: 'Lato', sans-serif;
+    margin-block-start: 0 !important;
+    margin-block-end: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 .stripe {
     display: grid;
     grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
@@ -110,3 +118,55 @@
     vertical-align: middle;
   }
   /*======================footer========================*/
+  @media only screen and (min-width: 880px) {
+    .stripe {
+      grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
+    }
+    .content_container.page_grid {
+      display: grid;
+      grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
+      grid-gap: 40px;
+    }
+    .footer {
+      padding-top: 40px;
+      padding-bottom: 20px;
+      background-color: #000000;
+      display: grid;
+      grid-template-columns: [col1] 1fr [col7];
+      grid-gap: 0px;
+    }
+    .flex-container {
+      display: flex;
+      flex-direction: row;
+    }
+    
+    .flex-item-left {
+      padding: 0px;
+      flex: 50%;
+      margin-left: 5vw;
+    }
+    
+    .flex-item-right {
+      padding: 0px;
+      flex: 50%;
+      margin-right: 5vw;
+    }
+  }
+  @media (max-width: 800px) {
+    .flex-item-right, .flex-item-left {
+      flex-direction: column;
+      margin: 0px;
+    }
+    .content_container input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    
+    .content_container input[type=text] {
+      border: 1px solid #ccc;  
+    }
+  }
