--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -118,6 +118,25 @@ body {
     vertical-align: middle;
   }
   /*======================footer========================*/
+  #top {
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #70cf84; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+    }
+    
+    #top:hover {
+    background-color: #505050; /* Add a dark-grey background on hover */
+    }
+    
   @media only screen and (min-width: 880px) {
     .stripe {
       grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
