--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -10,6 +10,10 @@ body {
     display: grid;
     grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
   }
+  .content_container {
+    grid-column-start: col1;
+    grid-column-end: col7;
+  }
   /*======================menubar========================*/
 .menubar {
     background-color: #ffffff;
@@ -136,7 +140,7 @@ body {
     #top:hover {
     background-color: #505050; /* Add a dark-grey background on hover */
     }
-    
+
   @media only screen and (min-width: 880px) {
     .stripe {
       grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
