--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -6,6 +6,28 @@ body {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+  .h1 {
+    font-family: 'Rozha One',serif;
+    text-align: center;
+    font-size: 4.5em;
+    font-weight: 100;
+    color: #323232;
+    margin-top: 25vh;
+    margin-bottom: 0vh;
+    margin-left: auto;
+    margin-right: auto;
+    letter-spacing: 5px; 
+  }
+  .h2{
+    text-align: center;
+    font-size: 20px;
+    color: #0f1f2a;
+    margin-top: 4vh;
+    margin-bottom: 0vh;
+    margin-left: auto;
+    margin-right: auto;
+    letter-spacing: 2px; 
+  }
 .stripe {
     display: grid;
     grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
