--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -6,7 +6,7 @@ body {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
-  .h1 {
+  h1 {
     font-family: 'Rozha One',serif;
     text-align: center;
     font-size: 4.5em;
@@ -18,7 +18,7 @@ body {
     margin-right: auto;
     letter-spacing: 5px; 
   }
-  .h2{
+  h2{
     text-align: center;
     font-size: 20px;
     color: #0f1f2a;
