--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -24,7 +24,7 @@ body {
     color: #0f1f2a;
     margin-top: 4vh;
     margin-bottom: 0vh;
-    margin-left: auto;
+    margin-left: 10vh;
     margin-right: auto;
     letter-spacing: 2px; 
   }
