--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -25,7 +25,7 @@ body {
     margin-top: 4vh;
     margin-bottom: 0vh;
     margin-left: 10vh;
-    margin-right: auto;
+    margin-right: 10vh;
     letter-spacing: 2px; 
   }
 .stripe {
