--- a/style-home.css
+++ b/style-home.css
@@ -422,6 +422,11 @@ div.overall {
   background-size: cover;
   text-align: center;
   margin: 0px;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 16px; 
+  font-weight: 600; 
+  letter-spacing: 1px; 
 }
 .feature_item button {
   width: 100%;
