--- a/style-home.css
+++ b/style-home.css
@@ -447,7 +447,7 @@ div.overall {
   background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/grow.jpg');
 }
 .feature_item.category3 h3 {
-  background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/intro.jpg');
+  background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/style.jpg');
 }
 .feature_item.category4 h3 {
   background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/species.jpg');
