--- a/style-information.css
+++ b/style-information.css
@@ -393,24 +393,24 @@ body {
 	}
 }
   
-  #top {
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: #071015; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 5px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-  }
-  
-  #top:hover {
-  background-color: #0f1f2a; /* Add a dark-grey background on hover */
-  }
+#top {
+	position: fixed; /* Fixed/sticky position */
+	bottom: 20px; /* Place the button at the bottom of the page */
+	right: 30px; /* Place the button 30px from the right */
+	z-index: 99; /* Make sure it does not overlap */
+	border: none; /* Remove borders */
+	outline: none; /* Remove outline */
+	background-color: #70cf84; /* Set a background color */
+	color: white; /* Text color */
+	cursor: pointer; /* Add a mouse pointer on hover */
+	padding: 15px; /* Some padding */
+	border-radius: 5px; /* Rounded corners */
+	font-size: 18px; /* Increase font size */
+	}
+	
+	#top:hover {
+	background-color: #505050; /* Add a dark-grey background on hover */
+	}
   /* Responsive layout - makes a one column-layout instead of a two-column layout */
   @media only screen and (min-width: 880px) {
 	.stripe {
