--- a/style-contactus.css
+++ b/style-contactus.css
@@ -572,4 +572,19 @@ input[type="submit"]:hover {
 div.form-container {
     margin: 6em 10em 10em 10em;
 }
-
+.content_container input[type=text] {
+  float: right;
+  padding: 6px;
+  margin-top: 0px;
+  margin-right: 0px;
+  border-bottom: 1px solid #505050;
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px; 
+  font-size: 17px;
+}
+::placeholder {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
