--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -28,6 +28,16 @@ body {
     margin-right: 10vh;
     letter-spacing: 2px; 
   }
+  h3{
+    text-align: center;
+    font-size: 20px;
+    color: #0f1f2a;
+    margin-top: 4vh;
+    margin-bottom: 5vh;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    letter-spacing: 2px; 
+  }
 .stripe {
     display: grid;
     grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
