--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -48,6 +48,7 @@ body {
     border-radius:10px;
     width: 95%;
     margin-left:2.5em;
+    margin-top: 5em;
     text-align: left;
     outline: none;
     transition: 0.4s;
