--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -6,6 +6,10 @@ body {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+  section.button-containter {
+    margin-top: 10vh;
+    margin-bottom: 10vh; 
+  }
   h1 {
     font-family: 'Rozha One',serif;
     text-align: center;
@@ -48,7 +52,7 @@ body {
     border-radius:10px;
     width: 95%;
     margin-left:2.5em;
-    margin-top: 2em;
+    margin-top: 3em;
     text-align: left;
     outline: none;
     transition: 0.4s;
