--- a/style-information.css
+++ b/style-information.css
@@ -107,8 +107,40 @@ body {
 	color: #ffffff;
   }
   .stripe {
-	display: grid;
-	grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
+    display: grid;
+    grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
+  }
+
+  .stripe.introduction {
+    background-image: linear-gradient(rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('images/intro.jpg');
+    background-size: 100%;
+    height: 60vh;
+    background-repeat: no-repeat;
+    padding: 0px;
+  }
+
+  .stripe.introduction h1 {
+    font-family: 'Rozha One',serif;
+    text-align: center;
+    font-size: 4.5em;
+    font-weight: 100;
+    color: #323232;
+    margin-top: 25vh;
+    margin-bottom: 0vh;
+    margin-left: auto;
+    margin-right: auto;
+    letter-spacing: 5px; 
+  }
+
+  .stripe.introduction h2 {
+    text-align: center;
+    font-size: 20px;
+    color: #0f1f2a;
+    margin-top: 1vh;
+    margin-bottom: 0vh;
+    margin-left: auto;
+    margin-right: auto;
+    letter-spacing: 2px; 
   }
 
   .stripe.slide {
