--- a/style-information.css
+++ b/style-information.css
@@ -114,7 +114,7 @@ body {
   .stripe.introduction {
     background-image: linear-gradient(rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('images/intro.jpg');
     background-size: 100%;
-    height: 60vh;
+    height: 80vh;
     background-repeat: no-repeat;
     padding: 0px;
   }
@@ -204,7 +204,7 @@ body {
   /* Caption text */
   .text {
 	color: #f5f5f5;
-	font: 18px 'Lato', serif;
+	font: 18px 'Lato', sans-serif;
 	padding: 8px 12px;
 	position: absolute;
 	bottom: 8px;
