--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -74,6 +74,13 @@ body {
     content: "\2212"; 
     color:white!important;
   }
+  p{
+    button.accordion {
+      margin-left:2.5em;
+      text-align: left;
+      font-size: 1.5em;
+  }
+  }
 
 .stripe {
     display: grid;
