--- a/style-home.css
+++ b/style-home.css
@@ -387,21 +387,21 @@ div.overall {
 .stripe.contents h2 {
   text-align: center;
   font-size: 5rem;
-  color: #0f1f2a;
+  color: #323232;
   margin-top: 0px;
   margin-bottom: 40px;
 }
 .feature.introduction h1 {
   text-align: center;
   font-size: 5rem;
-  color: #0f1f2a;
+  color: #323232;
   margin-top: 40px;
   margin-bottom: 20px;
 }
 .contents.introduction h1 {
   text-align: center;
   font-size: 5rem;
-  color: #0f1f2a;
+  color: #323232;
   margin-top: 0px;
   margin-bottom: 180px;
   padding-left: 200px;
