--- a/style-home.css
+++ b/style-home.css
@@ -272,12 +272,12 @@ button.overlay {
   padding-bottom: 20px; 
   background-color: transparent;
   background-repeat: no-repeat;
-  border: 2px solid #0f1f2a; 
+  border: 2px solid #323232; 
   cursor: pointer;
 }
 button.overlay a {
   text-decoration: none; 
-  color: #0f1f2a;
+  color: #323232;
   text-transform: uppercase;
   font-size: 16px; 
   font-weight: 600; 
@@ -361,7 +361,7 @@ div.overall {
 .stripe.introduction h2 {
   text-align: center;
   font-size: 20px;
-  color: #0f1f2a;
+  color: #323232;
   margin-top: 4vh;
   margin-bottom: 0vh;
   margin-left: auto;
