--- a/style-information.css
+++ b/style-information.css
@@ -143,7 +143,7 @@ body {
     letter-spacing: 2px; 
   }
 
-  .stripe.slide {
+  .slide {
 	margin-top: 10vh;
 	margin-bottom: 100px;
   }
@@ -153,7 +153,7 @@ body {
 	margin-bottom: 100px;
   }
 
-  .stripe.resource {
+  .resource {
 	text-align: center;
 	margin-top: 5vh;
   	margin-bottom: 100px;
