--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -6,6 +6,13 @@ body {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+  .stripe.introduction {
+    background-image: linear-gradient(rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('images/intro.jpg');
+    background-size: 100%;
+    height: 60vh;
+    background-repeat: no-repeat;
+    padding: 0px;
+  }
   section.button-containter {
     margin-top: 20vh;
     margin-bottom: 20vh; 
