--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -13,6 +13,29 @@ body {
     background-repeat: no-repeat;
     padding: 0px;
   }
+  .stripe.introduction h1 {
+    font-family: 'Rozha One',serif;
+    text-align: center;
+    font-size: 4.5em;
+    font-weight: 100;
+    color: #323232;
+    margin-top: 25vh;
+    margin-bottom: 0vh;
+    margin-left: auto;
+    margin-right: auto;
+    letter-spacing: 5px; 
+  }
+
+  .stripe.introduction h2 {
+    text-align: center;
+    font-size: 20px;
+    color: #0f1f2a;
+    margin-top: 1vh;
+    margin-bottom: 0vh;
+    margin-left: auto;
+    margin-right: auto;
+    letter-spacing: 2px; 
+  }
   section.button-containter {
     margin-top: 20vh;
     margin-bottom: 20vh; 
