--- a/style-home.css
+++ b/style-home.css
@@ -442,6 +442,9 @@ div.overall {
 .feature_item.category4 h3 {
   background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/species.jpg');
 }
+.feature_item.category5 h3 {
+  background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/species.jpg');
+}
   /*======================footer========================*/
   div.footer1 {
     margin-left: auto;
