--- a/style-home.css
+++ b/style-home.css
@@ -560,7 +560,7 @@ background-color: #505050; /* Add a dark-grey background on hover */
   }
   .content_container.page_grid {
     display: grid;
-    grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
+    grid-template-columns: [col1] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6] 1fr [col7];
     grid-gap: 40px;
   }
   .footer {
