--- a/style-home.css
+++ b/style-home.css
@@ -443,7 +443,7 @@ div.overall {
   background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/species.jpg');
 }
 .feature_item.category5 h3 {
-  background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/species.jpg');
+  background-image: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url('images/beginner.jpg');
 }
   /*======================footer========================*/
   div.footer1 {
