--- a/style-home.css
+++ b/style-home.css
@@ -381,6 +381,13 @@ div.overall {
   margin-top: 0px;
   margin-bottom: 40px;
 }
+.stripe.calculator h2 {
+  text-align: center;
+  font-size: 5rem;
+  color: #323232;
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
 .feature.introduction h1 {
   text-align: center;
   font-size: 5rem;
