--- a/style-home.css
+++ b/style-home.css
@@ -322,9 +322,10 @@ p.content1 {
   margin-top: 10vh;
   margin-bottom: 100px;
 }
-.stripe.contact {
+.stripe.contents {
   margin-top: 10vh;
   margin-bottom: 100px;
+  background-color: #70CF84; 
 }
 .stripe.introduction {
   background-image: linear-gradient(rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('images/intro.jpg');
