--- a/style-home.css
+++ b/style-home.css
@@ -442,10 +442,10 @@ div.overall {
 div.content_item {
   display: block; 
   background-color: #ffffff;
-  padding-top: 10vh;
-  padding-bottom: 10vh; 
-  padding-left: 10vw;
-  padding-right: 10vw;
+  margin-top: 10vh;
+  margin-bottom: 10vh; 
+  padding-left: 10px;
+  padding-right: 10px;
   height: auto;
   border-radius: 8px; 
 }
