--- a/style-home.css
+++ b/style-home.css
@@ -444,8 +444,10 @@ div.content_item {
   background-color: #ffffff;
   margin-top: 10vh;
   margin-bottom: 10vh; 
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
   height: auto;
   border-radius: 8px; 
 }
