--- a/style-home.css
+++ b/style-home.css
@@ -451,6 +451,20 @@ div.content_item {
   height: auto;
   border-radius: 8px; 
 }
+.content_item h3 {
+  padding-top: 300px;
+  padding-bottom: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  margin: 0px;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 16px; 
+  font-weight: 600; 
+  letter-spacing: 1px; 
+}
 p.content {
   margin-top: 0vh;
   margin-bottom: 0vh;
