--- a/style-home.css
+++ b/style-home.css
@@ -452,14 +452,9 @@ div.content_item {
   border-radius: 8px; 
 }
 .content_item h3 {
-  padding-top: 300px;
-  padding-bottom: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   text-align: center;
   margin: 0px;
-  color: #ffffff;
+  color: #323232;
   text-transform: uppercase;
   font-size: 16px; 
   font-weight: 600; 
