--- a/style-home.css
+++ b/style-home.css
@@ -455,7 +455,7 @@ div.content_item {
   text-align: center;
   margin: 0px;
   color: #323232;
-  text-transform: uppercase;
+  font-family: 'Rozha One',serif;
   font-size: 16px; 
   font-weight: 600; 
   letter-spacing: 1px; 
