--- a/style-home.css
+++ b/style-home.css
@@ -456,7 +456,7 @@ div.content_item {
   margin: 0px;
   color: #323232;
   font-family: 'Rozha One',serif;
-  font-size: 16px; 
+  font-size: 1.5em; 
   font-weight: 600; 
   letter-spacing: 1px; 
 }
