--- a/style-home.css
+++ b/style-home.css
@@ -463,8 +463,9 @@ hr {
   height: 2px;
   width: 50%;
   border-width: 0;
-  color: gray;
-  background-color: gray;
+  color: #f5f5f5;
+  background-color: #f5f5f5;
+  margin: auto; 
 }
 p.content {
   text-align: center;
