--- a/style-calculator.css
+++ b/style-calculator.css
@@ -285,7 +285,7 @@ label {
   margin-top: 10px;
   font-weight: bold;
 }
-input[type="text1"], input[type="email"], textarea {
+input[type="text1"], input[type="text2"], textarea {
   border: none;
   border-radius: 3px;
   padding: 10px;
