--- a/style-information.css
+++ b/style-information.css
@@ -162,6 +162,14 @@ body {
   	padding: 0px;
   	font-size: 16px;
   }
+  .slideshow {
+	margin-left: 300px;
+	margin-right: 300px;
+  }
+  .slideshow h2 {
+	text-align: center;
+  }
+
 /* Slideshow container */
 .slideshow-container {
 	max-width: 1000px;
@@ -531,6 +539,7 @@ body {
 	  page-break-after: avoid;
 	}
   }
+  
 
 
   
