--- a/style-index.css
+++ b/style-index.css
@@ -655,6 +655,17 @@ background-color: #505050; /* Add a dark-grey background on hover */
   .content_container input[type=text] {
     border: 1px solid #ccc;  
   }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 @media (min-width: 375px) and (max-width: 768px) {
   .flex-item-right, .flex-item-left {
