--- a/style-index.css
+++ b/style-index.css
@@ -713,14 +713,20 @@ background-color: #505050; /* Add a dark-grey background on hover */
   }
   .stripe.introduction h1 {
     font-size: 2em;
-    margin-top: 20px;
+    margin-top: 20vh;
   }
   .stripe.introduction h2 {
     font-size: 16px;
   }
   p.intro_text {
     font-size: 14px;
-}
+  }
+  p.overall {
+    font-size: 1em;
+  }
+  p.overallblockquote {
+    font-size: 1em;
+  }
   div.content_item {
     margin-top: 5vh;
     margin-bottom: 5vh;
